--- a/ProFossJsonTest/ProFossJsonTest.csproj
+++ b/ProFossJsonTest/ProFossJsonTest.csproj
@@ -7,11 +7,12 @@
     <ProjectGuid>{F8E7F374-B0D8-4441-A43A-63664A1502D0}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>ProFossJsonTest</RootNamespace>
-    <AssemblyName>ProFossJsonTest</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <AssemblyName>ProFossWebClient</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -71,6 +72,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
