--- a/OpcUaClient/EasyOpcUADemo/MMIIOpcUaClient.csproj
+++ b/OpcUaClient/EasyOpcUADemo/MMIIOpcUaClient.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{D0D84A59-8A2B-4DC0-A24E-61C6B8B9B7FA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EasyOpcUADemo</RootNamespace>
-    <AssemblyName>EasyOpcUADemo</AssemblyName>
+    <RootNamespace>OpcUaTestClient</RootNamespace>
+    <AssemblyName>MMIIOpcUaTestClient</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
