--- a/OpcUaClient/EasyOpcUADemo/app.config
+++ b/OpcUaClient/EasyOpcUADemo/app.config
@@ -9,15 +9,26 @@
       <level value="ALL" />
       <!--<appender-ref ref="ColoredConsoleAppender" />
         <appender-ref ref="MyFileAppender" />-->
-      <appender-ref ref="MyFileAppender"/>
+      <appender-ref ref="InfoAppender"/>
+      <appender-ref ref="AllAppender"/>
     </root>
     <appender name="MyAppender" type="log4net.Appender.ConsoleAppender">
       <layout type="log4net.Layout.PatternLayout">
         <conversionPattern value="%date %level %logger - %message%newline" />
       </layout>
     </appender>
-    <appender name="MyFileAppender" type="log4net.Appender.FileAppender">
+    <appender name="InfoAppender" type="log4net.Appender.FileAppender">
+      <threshold value="INFO" />
       <file value=".\Logs\application.log" />
+      <appendToFile value="true" />
+      <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %level %logger - %message%newline" />
+      </layout>
+    </appender>
+    <appender name="AllAppender" type="log4net.Appender.FileAppender">
+      <threshold value="ALL" />
+      <file value=".\Logs\DebugApplication.log" />
       <appendToFile value="true" />
       <lockingModel type="log4net.Appender.FileAppender+MinimalLock" />
       <layout type="log4net.Layout.PatternLayout">
