--- a/ProfossOpcClient/ProfossOpcClient/App.config
+++ b/ProfossOpcClient/ProfossOpcClient/App.config
@@ -21,4 +21,10 @@
   <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
     </startup>
+  <appSettings>
+    <add key="KepServer.V5" value="Kepware.KEPServerEX.V5"/>
+    <add key="KepServer.V6" value="Kepware.KEPServerEX.V6"/>
+    <add key="SomeSettigs" value="SomeValue"/>
+    <add key="LastGroup" value="ProFoss.PDx"/>
+    </appSettings>
 </configuration>
