Moved OPC client to common place

--- a/OPCCsvLoggerClient/App.config
+++ b/OPCCsvLoggerClient/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <OPCCsvLoggerClient.Properties.Settings>
             <setting name="KepServerGroupName" serializeAs="String">
-                <value>MMII.PDx.</value>
+                <value>MMII.PDx</value>
             </setting>
             <setting name="KepServerName" serializeAs="String">
                 <value>Kepware.KEPServerEX.V6</value>
