Made some enhitances and removed unused code.

--- a/OPCClient/OPCClient.csproj
+++ b/OPCClient/OPCClient.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Communicators\KepServerCommunicator.cs" />
     <Compile Include="Communicators\MilkoStreamKepServerCommunicator.cs" />
     <Compile Include="Communicators\ProFossKepServerCommunicator.cs" />
     <Compile Include="InstrumentStateMode.cs" />
