--- a/FT3CuvetteWear/IrmaCuvetteWear/IrmaCuvetteWear.csproj
+++ b/FT3CuvetteWear/IrmaCuvetteWear/IrmaCuvetteWear.csproj
@@ -53,8 +53,10 @@
     </Compile>
     <Compile Include="LogFileHelper.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="ProgressEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WearInfo.cs" />
+    <Compile Include="WearResult.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
