Added more parameter tags, and some more logging

--- a/NoraOpcUaTestServer/App.config
+++ b/NoraOpcUaTestServer/App.config
@@ -182,6 +182,9 @@
       <setting name="RootFolder" serializeAs="String">
         <value>Foss</value>
       </setting>
+      <setting name="LogFolder" serializeAs="String">
+        <value>Logs</value>
+      </setting>
     </NoraOpcUaTestServer.Properties.Settings>
   </applicationSettings>
 </configuration>
