--- a/NoraOpcUaTestServer/Properties/Settings.settings
+++ b/NoraOpcUaTestServer/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="RootFolder" Type="System.String" Scope="Application">
       <Value Profile="(Default)">Foss</Value>
     </Setting>
+    <Setting Name="LogFolder" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">Logs</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
