Upgraded nodes and some new forms

--- a/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
+++ b/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
@@ -149,9 +149,6 @@
     <Reference Include="Microsoft.Extensions.Options, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Extensions.Options.6.0.0\lib\net461\Microsoft.Extensions.Options.dll</HintPath>
     </Reference>
-    <Reference Include="Microsoft.Extensions.PlatformAbstractions, Version=1.1.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Extensions.PlatformAbstractions.1.1.0\lib\net451\Microsoft.Extensions.PlatformAbstractions.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.Extensions.Primitives, Version=6.0.0.0, Culture=neutral, PublicKeyToken=adb9793829ddae60, processorArchitecture=MSIL">
       <HintPath>packages\Microsoft.Extensions.Primitives.6.0.0\lib\net461\Microsoft.Extensions.Primitives.dll</HintPath>
     </Reference>
@@ -216,11 +213,6 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
-    <Reference Include="System.Runtime.InteropServices.RuntimeInformation, Version=4.0.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.Runtime.InteropServices.RuntimeInformation.4.3.0\lib\net45\System.Runtime.InteropServices.RuntimeInformation.dll</HintPath>
-      <Private>True</Private>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security.Cryptography.Algorithms, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Security.Cryptography.Algorithms.4.3.1\lib\net463\System.Security.Cryptography.Algorithms.dll</HintPath>
@@ -270,8 +262,21 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlarmsForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AlarmsForm.Designer.cs">
+      <DependentUpon>AlarmsForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Logger.cs" />
     <Compile Include="CsvHelper.cs" />
+    <Compile Include="NodesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NodesForm.Designer.cs">
+      <DependentUpon>NodesForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="OpcNodes\AlarmNodes.cs" />
     <Compile Include="OpcNodes\EventNodes.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
@@ -281,12 +286,13 @@
     </Compile>
     <Compile Include="OpcNodes\NodeBase.cs" />
     <Compile Include="OpcNodes\NoraNodes.cs" />
+    <Compile Include="OpcNodes\ParametersNodes.cs" />
     <Compile Include="OpcUaHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="OpcNodes\ReadNodes.cs" />
-    <Compile Include="OpcNodes\ResultNodes.cs" />
-    <Compile Include="OpcNodes\WriteNodes.cs" />
+    <Compile Include="OpcNodes\InstrumentNodes.cs" />
+    <Compile Include="OpcNodes\SampleNodes.cs" />
+    <Compile Include="OpcNodes\ControllerNodes.cs" />
     <Compile Include="SettingsForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -302,8 +308,14 @@
     <Compile Include="States\StateNoraZeroing.cs" />
     <Compile Include="States\StateServerStarted.cs" />
     <Compile Include="States\StateServerStopped.cs" />
+    <EmbeddedResource Include="AlarmsForm.resx">
+      <DependentUpon>AlarmsForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NodesForm.resx">
+      <DependentUpon>NodesForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
