Add column for real pc and icon

--- a/NoraJitterTool/NoraJitterTool.csproj
+++ b/NoraJitterTool/NoraJitterTool.csproj
@@ -35,6 +35,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>Krikke.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.4.4\lib\net45\EntityFramework.dll</HintPath>
@@ -77,6 +80,10 @@
     <Compile Include="Migrations\202302270802090_NodelResults.designer.cs">
       <DependentUpon>202302270802090_NodelResults.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202304250818038_PhysicalPCColumn.cs" />
+    <Compile Include="Migrations\202304250818038_PhysicalPCColumn.designer.cs">
+      <DependentUpon>202304250818038_PhysicalPCColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\Delays.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="MainForm.cs">
@@ -113,6 +120,9 @@
     <EmbeddedResource Include="Migrations\202302270802090_NodelResults.resx">
       <DependentUpon>202302270802090_NodelResults.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202304250818038_PhysicalPCColumn.resx">
+      <DependentUpon>202304250818038_PhysicalPCColumn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -136,7 +146,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Krikke.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
