Small tool to test export from Nova

--- a/TestExport/app.config
+++ b/TestExport/app.config
@@ -8,7 +8,7 @@
     <applicationSettings>
         <TestExport.Properties.Settings>
             <setting name="Folder" serializeAs="String">
-                <value>C:\FOSS\Lims\Export</value>
+                <value>C:\FOSS\Export</value>
             </setting>
         </TestExport.Properties.Settings>
     </applicationSettings>
