Change output paths

--- a/Psc2/NoraJitterTool/NoraJitterTool.csproj
+++ b/Psc2/NoraJitterTool/NoraJitterTool.csproj
@@ -7,7 +7,7 @@
     <ImportWindowsDesktopTargets>true</ImportWindowsDesktopTargets>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <OutputPath>..\Output\NoraJitterTool\</OutputPath>
+    <OutputPath>..\..\Output\NoraJitterTool\</OutputPath>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationIcon>Krikke.ico</ApplicationIcon>
