--- a/Psc2/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
+++ b/Psc2/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
@@ -44,7 +44,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Output\NoraOpcUaTestServer\</OutputPath>
+    <OutputPath>..\..\Output\NoraOpcUaTestServer\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
