Changed to use SQL server login

--- a/Psc2/NoraJitterTool/config.json
+++ b/Psc2/NoraJitterTool/config.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
     "TestServer": "data source=.\\SQL2019;initial catalog=NoraJitterData;integrated security=True;Trust Server Certificate=True",
-    "JitterServer": "data source=Bl-JitterData;initial catalog=NoraJitterData;integrated security=True;Trust Server Certificate=True"
+    "JitterServer": "data source=Bl-JitterData;initial catalog=NoraJitterData;User Id=JitterUser;Password=FossJitter;Trust Server Certificate=True"
   }
 }
