--- a/Psc2/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
+++ b/Psc2/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
@@ -158,6 +158,10 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NiceLittleLogger, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\NiceLittleLogger\bin\Release\NiceLittleLogger.dll</HintPath>
+    </Reference>
     <Reference Include="Opc.UaFx.Advanced, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0220af0d33d50236, processorArchitecture=MSIL">
       <HintPath>packages\Opc.UaFx.Advanced.2.20.2\lib\net471\Opc.UaFx.Advanced.dll</HintPath>
     </Reference>
@@ -280,8 +284,6 @@
     <Compile Include="EventsForm.Designer.cs">
       <DependentUpon>EventsForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Logging\Logger.cs" />
-    <Compile Include="Logging\CsvWriter.cs" />
     <Compile Include="Logging\LogHelper.cs" />
     <Compile Include="NodesForm.cs">
       <SubType>Form</SubType>
