--- a/ProfossOpcClient/ProfossOpcClient/App.config
+++ b/ProfossOpcClient/ProfossOpcClient/App.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
   </configSections>
   <log4net>
     <root>
@@ -16,15 +16,26 @@
         <conversionPattern value="%date %level %logger - %message%newline" />
       </layout>
     </appender>
- 
   </log4net>
-  <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1"/>
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+  </startup>
   <appSettings>
-    <add key="KepServer.V5" value="Kepware.KEPServerEX.V5"/>
-    <add key="KepServer.V6" value="Kepware.KEPServerEX.V6"/>
-    <add key="SomeSettigs" value="SomeValue"/>
-    <add key="LastGroup" value="ProFoss.PDx"/>
-    </appSettings>
+    <add key="KepServer.V5" value="Kepware.KEPServerEX.V5" />
+    <add key="KepServer.V6" value="Kepware.KEPServerEX.V6" />
+    <add key="LastGroup" value="ProFoss.PDx" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
+  </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
