Updated server to get start mode

--- a/Psc2/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
+++ b/Psc2/NoraOpcUaTestServer/NoraOpcUaTestServer.csproj
@@ -323,6 +323,7 @@
     </Compile>
     <Compile Include="States\IState.cs" />
     <Compile Include="States\StateNoraCip.cs" />
+    <Compile Include="States\StateNoraProcessCleaning.cs" />
     <Compile Include="States\StateNoraCleaning.cs" />
     <Compile Include="States\StateNoraMeasuring.cs" />
     <Compile Include="States\StateNoraPreparing.cs" />
