--- a/MstOpcClient/MstOpcClient/MstOpcClient.csproj
+++ b/MstOpcClient/MstOpcClient/MstOpcClient.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{092A7F04-646E-432A-B56E-4C34B302DBDA}</ProjectGuid>
+    <ProjectGuid>{49566E77-EEAF-4B4D-AE2E-129062B720E5}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>MstOpcClient</RootNamespace>
     <AssemblyName>MstOpcClient</AssemblyName>
@@ -27,16 +27,15 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-
     <OutputPath>..\..\Output\MstOpcClient\</OutputPath>
-
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=2.0.12.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\packages\log4net.2.0.12\lib\net45\log4net.dll</HintPath>
+    <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=x86">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\ProfossOpcClient\packages\log4net.2.0.15\lib\net45\log4net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
